--- a/public/index.html
+++ b/public/index.html
@@ -67,11 +67,15 @@
     });
     var elems = document.querySelectorAll('.carousel');
     var instances = M.Carousel.init(elems, {
-      numVisible: 20,
+      numVisible: 14,
       duration: 190,
 
     });
 
+    var elems = document.querySelectorAll('.slider');
+    var instances = M.Slider.init(elems);
+
+    
     
     });
   </script>
